--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-ansible-core==2.11.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-ansible==4.6.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-cffi==1.14.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-cryptography==3.4.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-jinja2==3.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-markupsafe==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-packaging==21.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pyyaml==5.4.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
-resolvelib==0.5.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+ansible-core==2.11.12 ; python_version >= "3.7" and python_version < "4.0"
+ansible==4.10.0 ; python_version >= "3.7" and python_version < "4.0"
+cffi==1.15.1 ; python_version >= "3.7" and python_version < "4.0"
+cryptography==40.0.2 ; python_version >= "3.7" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.7" and python_version < "4.0"
+markupsafe==2.1.2 ; python_version >= "3.7" and python_version < "4.0"
+packaging==23.1 ; python_version >= "3.7" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.7" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.7" and python_version < "4.0"
+resolvelib==0.5.4 ; python_version >= "3.7" and python_version < "4.0"
