--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -21,10 +21,10 @@ jobs:
           # - alpine313
           # - alpine314
           # - centos7
-          - centos8
+          # - centos8
           # - debian8
-          - debian9
-          - debian10
+          # - debian9
+          # - debian10
           # - debian11
           # - fedora
           # - fedora34
@@ -32,7 +32,8 @@ jobs:
           # - rocky8
           - ubuntu1604
           - ubuntu1804
-          - ubuntu2004
+          # - ubuntu2004
+          - ubuntu2204
         python-version: [3.9]
 
     steps:
