--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -104,6 +104,10 @@ dnsmasq_forward_nonrouted_addresses: false
 # Set to 0 to disable DNS
 dnsmasq_listen_port: 53
 
+# value for nameserver in /etc/resolv.conf some tools do not like the :port argument 
+# may ovveride such as 127.0.0.1
+dnsmasq_resolvconf_nameserver: "127.0.0.1:{{ dnsmasq_listen_port }}"
+
 # Define your dns servers
 dnsmasq_nameservers:
   - 8.8.4.4
