--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,8 @@
     name: dnsmasq
     state: restarted
   become: true
+
+- name: reload systemd
+  ansible.builtin.systemd:
+    daemon_reload: yes
+  become: true
